Volume Scatter crash blender #45333

Closed
opened 2015-07-06 01:14:12 +02:00 by Ivan Rosales Mendez · 12 comments

System Information
Windows 7 32bits
Nvidia 9500gt

Blender Version
Broken: (2.75)
Worked: (optional)

Short description of error
When I change the color in a volume scattering node blender crashes.
Exact steps for others to reproduce the error

  1. I remove the surface node.
  2. I put a volume scattering node in volume.
    3.Change the color a lot of times and the blender will crash, i tested 10 times.
    Based on a (as simple as possible) attached .blend file with minimum amount of steps
**System Information** Windows 7 32bits Nvidia 9500gt **Blender Version** Broken: (2.75) Worked: (optional) **Short description of error** When I change the color in a volume scattering node blender crashes. **Exact steps for others to reproduce the error** 1. I remove the surface node. 2. I put a volume scattering node in volume. 3.Change the color a lot of times and the blender will crash, i tested 10 times. Based on a (as simple as possible) attached .blend file with minimum amount of steps

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ivanx507

Added subscriber: @ivanx507

Added subscriber: @Sergey

Added subscriber: @Sergey

Please always attach simple .blend file which demonstrates the issue.

Also, is it viewport render, material preview render or final render? Is it CPU or GPU render?

Please always attach simple .blend file which demonstrates the issue. Also, is it viewport render, material preview render or final render? Is it CPU or GPU render?

Is in the material preview, and is in the cpu rendering
untitled.blend

Is in the material preview, and is in the cpu rendering [untitled.blend](https://archive.blender.org/developer/F204496/untitled.blend)

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I got EXCEPTION_ACCESS_VIOLATION.
I think that 9500gt is not listed by compute device.
I tried it in CPU render.

I got EXCEPTION_ACCESS_VIOLATION. I think that 9500gt is not listed by compute device. I tried it in CPU render.

I think that it occurs in the case of rendered shading because processing is heavy.
When they were going to choose a color again right after they chose a color, the following errors occurred.

ERROR: Python context internal state bug. this should not happen!
ERROR: Python context internal state bug. this should not happen!
ERROR: Python context internal state bug. this should not happen!
ERROR: Python context internal state bug. this should not happen!
ERROR: Python context internal state bug. this should not happen!
ERROR: EXCEPTION_ACCESS_VIOLATION

I think that it occurs in the case of rendered shading because processing is heavy. When they were going to choose a color again right after they chose a color, the following errors occurred. ``` ERROR: Python context internal state bug. this should not happen! ERROR: Python context internal state bug. this should not happen! ERROR: Python context internal state bug. this should not happen! ERROR: Python context internal state bug. this should not happen! ERROR: Python context internal state bug. this should not happen! ERROR: EXCEPTION_ACCESS_VIOLATION ```
Sergey Sharybin self-assigned this 2015-07-08 12:42:57 +02:00

Managed to reproduce on 32bit windows. Will have a look later a bit.

Managed to reproduce on 32bit windows. Will have a look later a bit.

This issue was referenced by 9f63cbf4a7

This issue was referenced by 9f63cbf4a74486f4df030fe8c3fe5fa3952b0910

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@31bcbb52e0

This issue was referenced by blender/cycles@31bcbb52e08bc3a588709fc634e3ab400a368289
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45333
No description provided.