Fix T45333: Volume Scatter crash blender